[tool.poetry]
name = "ml_lab"
version = "0.1.0"
description = ""
authors = ["Dmitry Labazkin <labdmitriy@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.7"
numpy = "^1.21.4"
scikit-learn = "^1.0.1"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
jupyterlab = "^3.2.4"
flake8 = "^4.0.1"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-quotes = "^3.3.1"
flake8-builtins = "^1.5.3"
yapf = "^0.31.0"
isort = "^5.10.1"
mypy = "^0.910"
pre-commit = "^2.15.0"
matplotlib = "^3.5.0"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
